2007-02-13  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added a function to dump an eaccelerator class entry in debug.c
        * Changed include order in mm.c because of eaccelerator.h include in debug.h 
        * Fixed a nullpointer dereference in some special cases in ea_restore.c:509
        * Always compile a ea_debug_error message in ea_restore.c
        * Cleanup: Removed some commented out code, changed some debug statements,
            reordered some conditional includes to reduce ifdef statements
        * Check if those array indices are set before testing them in control.php
        * Revert some changes form changeset @256 to fix bug #199
        * Some more year updates
        * Fix loading of cached scripts and data on disk
        * Fixed a bug in the zend_class_entry dump debug routine

2007-01-29  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Removed some obsolete code

2007-01-04  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Happy new-year

2006-11-08  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Enable disassembler links again in the control panel
        * Add some more isset for E_ALL error reporting

2006-11-04  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * It seems I'm longer able to do simple comparisons, this 
          should fix #187 and is a real fix for #182

2006-10-26  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix encoding and decoding of eA and php versions. Only three numbers
          versions were encoded, this way file cache isn't removed when using
          svn snapshots or rc releases.
        * Fix a compile warning when using filename hashing instead of inode 
          hashing.
        * Optimize a part of the inode hashing function.
        * Remove a conditional compile for very old php versions in the filename
          hashing function.
        * Included the new control center written by Thomas Love. It rocks!
