@@ -1,3 +1,8 @@
+2007-02-15  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Use emalloc for filter lists, mixing memory from two allocators is 
+          enough.
+
 2007-02-13  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Added a function to dump an eaccelerator class entry in debug.c
